fix(kit): sequences of white space are preserved for `inputTag` (#2046)

--- a/projects/core/styles/mixins/mixins.less
+++ b/projects/core/styles/mixins/mixins.less
@@ -269,8 +269,8 @@
 }
 
 // typical properties for text overflow with ellipsis
-.text-overflow() {
-    white-space: nowrap;
+.text-overflow(@type: nowrap) {
+    white-space: @type;
     overflow: hidden;
     text-overflow: ellipsis;
 }
